frontend/test/should_pass/emit_004.grg

rule r1 {
  x:Node;
  negative { x <-- ; }
  modify{
    emit("0", (x)=r2(x));
  }
}

rule r2(x:Node) {
  x --> y:Node;
  modify {
    delete(x);
    emit("-->O", r2(y));
  }
}
