frontend/test/should_fail/exec_013.grg
rule r1(-x:Edge->) {
  n:Node;
  modify{
    exec(r1(n));
  }
}

